# web3-boilerplate-rs

./: README.md
backend/: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
backend/.sqlx/: query-67eea185d7d39f0b822b4a942e942f113cfcb67f5d4e2e6f0a6d9f34e6718b44.json  query-ac8aad0463e3170a2555808813d2dc8489d721b66da3073a34058cbb82c6647b.json  query-ce759dd3441534cde8631e9c0c150a00d889636bdb7e5dc4bc0fced267888440.json
backend/abi/: IERC20.json
backend/config/: local.toml
backend/migrations/: 20250528144328_create_eth_accounts.down.sql  20250528144328_create_eth_accounts.up.sql  20250529100839_create_eth_account_balances.down.sql  20250529100839_create_eth_account_balances.up.sql
backend/src/: cache.rs  config.rs  db.rs  error.rs  eth.rs  lib.rs  main.rs  state.rs
backend/src/handlers/: account.rs  erc20.rs  health.rs  misc.rs  mod.rs  utils.rs
backend/tests/: cache_test.rs  db_test.rs  eth_test.rs  handlers_test.rs
contracts/: .env_template  README.md  hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: MyToken.sol
contracts/ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
contracts/ignition/deployments/chain-11155111/artifacts/: MyTokenModule#MyToken.dbg.json  MyTokenModule#MyToken.json
contracts/ignition/modules/: MyToken.ts
contracts/scripts/: mint.ts
contracts/src/: LigtToken.sol
