[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = {version="0.8", features=["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "rust_decimal", "postgres", "migrate", "derive", "macros" ] }
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust_decimal = "1.37"
config = "0.14"
anyhow = "1.0"
alloy-sol-types = "1.1"
alloy-contract = "1.0"
thiserror = "2.0"
redis = { version = "0.31", features = ["tokio-comp", "rust_decimal"] }
axum-test = "17.3.0"
alloy = "1.0"
